--- a/style.css
+++ b/style.css
@@ -15,3 +15,39 @@ body {
 height: 300px;
 width: 300px;
 }
+
+.listas {
+    display: inline-block;
+}
+
+#licoes_aprendidas {
+    margin-left: 10px;
+    display: inline-block;
+    float: left;
+}
+
+#licoes_a_aprender {
+    margin-left: 10px;
+    display: inline-block;
+    float: right;
+}
+
+
+.article1 {
+    display: inline-block;
+    width: 40%;
+    margin-right: 10px;
+    padding: 15px;
+    text-align: justify;
+}
+
+.aside1 {
+  margin: 5px;
+  padding: 10px;
+  width: 10%;
+  padding-left: 250px;
+  margin-left: 250px;
+  display: inline-block;
+  vertical-align: top;
+  text-align: justify;
+}
