resolucao do requisito 12 bonus, automaticamente o requisito 13 foi finalizado junto

--- a/style.css
+++ b/style.css
@@ -50,3 +50,19 @@ body {
   vertical-align: top;
   text-align: justify;
 }
+
+.table1 {
+  
+  background: orange; 
+   border-color: blue; 
+   border-style:dashed; 
+}
+
+.table1 tr {
+     text-align: center; 
+}
+
+.table1 th {
+  background: #666;
+  color: white; 
+}
