--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@
 
 body {
   background-color: rgb(253, 251, 251);
-  font-family:monospace;
-  font-size:15px;
-  color:brown;
+  font-family: monospace;
+  font-size: 15px;
+  color: brown;
   line-height: 30px;
 }
 
@@ -36,37 +36,35 @@ body {
   float: right;
 }
 
-.article1 {
+.lado-esquerdo {
   display: inline-block;
-  width: 40%;
-  margin-right: 10px;
-  padding: 15px;
+  width: 50%;
+  margin-right: 100px;
+  padding: 5px;
   text-align: justify;
 }
 
-.aside1 {
-  margin: 5px;
+.lado-direito {
   padding: 10px;
   width: 10%;
-  padding-left: 250px;
-  margin-left: 250px;
+  padding-left: 10px;
+  margin-left: 10px;
   display: inline-block;
   vertical-align: top;
   text-align: justify;
 }
 
 .table1 {
-  
-  background: orange; 
-   border-color: blue; 
-   border-style:dashed; 
+  background: orange;
+  border-color: blue;
+  border-style: dashed;
 }
 
 .table1 tr {
-     text-align: center; 
+  text-align: center;
 }
 
 .table1 th {
   background: #666;
-  color: white; 
+  color: white;
 }
